--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -47,7 +47,7 @@
                         </li>
                         {% if is_granted('ROLE_USER') or is_granted('ROLE_ADMIN') %}
                         <li>
-                            <a href="{{ path('pa_general_mes_annonces') }}">{{'Mes_annonces_title'|trans}}</a>
+                            <a href="{{ path('pa_annonce_afficher_mesannonces') }}">{{'Mes_annonces_title'|trans}}</a>
                         </li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown">{{ 'Mon_compte_connected_title'|trans}} <b class="caret"></b></a>
