--- a/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
@@ -93,15 +93,21 @@
 	    <div class="col-lg-12">
 	        <h2 class="page-header">{{'annonces_portfolio_title' | trans }}</h2>
 	    </div>
-	    {% if entities is not empty %}
-	    {% for entity in entities %}
+	    {% if annonces is not empty %}
+	    {% for annonce in annonces %}
 		    <div class="col-md-4 col-sm-6">
-		    	<h4>{{entity.antitre}}</h4>
-		        <a href="portfolio-item.html">
-		            <img class="img-responsive img-portfolio img-hover" src="{{ entity.animage }}" alt="">
-		        </a>
-		        {{ entity.andescription }}
-		    </div>
+		        <div class="thumbnail">
+		        	<h4>{{annonce.antitre}}</h4>
+			        <a href="portfolio-item.html">
+			            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+			        </a>
+				    <div class="caption">
+				        {{ annonce.andescription }}
+				        <b>{{ annonce.anprix }} €</b>
+				        <p><a href="#" class="btn btn-primary" role="button">{{ 'voir_detail_txt' | trans }}</a></p>
+				    </div>
+				</div>
+	   		</div>
 		{% endfor %}
 	    {% else %}
 	    {{'no_result_annonces' | trans}}
