Modifier Annonce, MAJ CSS pour la bandeau

--- a/src/PA/AnnonceBundle/Resources/views/Annonce/mesannonces.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/mesannonces.html.twig
@@ -46,7 +46,7 @@
 					    <div class="caption">
 					        {{ annonce.andescription }}
 					        <b>{{ annonce.anprix }} €</b>
-					        <p><a href="#" class="btn btn-primary" role="button">{{ 'voir_detail_txt' | trans }}</a></p>
+					        <p><a href="#" class="btn btn-primary" role="button">{{ 'voir_detail_txt' | trans }}</a> <span class="glyphicon glyphicon-cog" aria-hidden="true"></span></p>
 					    </div>
 					</div>
 			    </div>
