--- a/src/PA/AnnonceBundle/Resources/views/Annonce/formvuannonce.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/formvuannonce.html.twig
@@ -1,5 +1,10 @@
 {% extends "::base.html.twig" %}
 {% block body %}
+	{% if iscreation %}
+		{% set route = path('pa_annonce_ajouter') %}
+	{% else %}	
+		{% set route = path('pa_annonce_modifier', {'id': idannonce}) %}
+	{% endif %}
 	<!-- Page Content -->
 	<div class="container">
 
@@ -14,8 +19,8 @@
 	<!-- First section -->
 	<div class="row">
 		<h2>Créer une nouvelle annonce</h2>
-		<p>{{ 'fil_ariane_text' | trans }}<a title="Accueil_title" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_annonce_afficher_mesannonces') }}">{{ 'Mes_annonces_title' | trans }}</a> >> <a href="{{ path('pa_annonce_ajouter') }}">{{ 'Creer_annonce_title' | trans }}</a></p>
-		<form action="{{path('pa_annonce_ajouter')}}" id="form_creer_annonce" method="post" {{ form_enctype(form) }}>
+		<p>{{ 'fil_ariane_text' | trans }}<a title="Accueil_title" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_annonce_afficher_mesannonces') }}">{{ 'Mes_annonces_title' | trans }}</a> >> <a href="{{route}}">{{ 'Creer_annonce_title' | trans }}</a></p>
+		<form action="{{route}}" id="form_creer_annonce" method="post" {{ form_enctype(form) }}>
 			{{ form_rest(form) }}
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
