--- a/src/PA/GeneralBundle/Resources/public/css/bootstrap.css
+++ b/src/PA/GeneralBundle/Resources/public/css/bootstrap.css
@@ -4290,7 +4290,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
 .navbar-inverse {
-  background-color: green;                                                             /* Ligne sous top-menu */
+  background-color: #45326d;                                                             /* Ligne sous top-menu */
 }
 .navbar-inverse .navbar-brand {
   color: #9d9d9d;
