Suppression de vues inutiles, modification rapide du css ( a suivre ), modification de l'index pour changer la vitesse de rotation du carousel

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -112,6 +112,14 @@
                 </div>
             </footer>
             <div class="clear"></div>
+
+            <!-- Script to Activate the Carousel -->
+            <script>
+            $('.carousel').carousel({
+                interval: 3000 //changes the speed
+            })
+            </script>
+
         </div>
     </body>
 </html>
