--- a/src/PA/GeneralBundle/Resources/views/Default/interfaceGestion.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/interfaceGestion.html.twig
@@ -6,9 +6,6 @@
 
 		<!-- Spacing section -->
 		<div class="clear"></div>
-		<i class="fa fa-tree">TETSTTTTT</i>
-		<div class="clear"></div>
-		<!-- /.row -->
 
 		<!-- First section -->
 		{% if is_granted('ROLE_ADMIN') %}
@@ -43,12 +40,8 @@
 						<td>Looser</td>
 						<td>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
-							        <span class="glyphicon glyphicon-edit"> Edit</span>
-								</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
-							        <span class="glyphicon glyphicon-trash"> Delete</span>
-								</button>
+								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">Edit</button>
+								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">Delete</button>
 							</p>
 						</td>
 					</tr>
@@ -59,12 +52,8 @@
 						<td>Looser</td>
 						<td>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
-							        <span class="glyphicon glyphicon-edit"> Edit</span>
-								</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
-							        <span class="glyphicon glyphicon-trash"> Delete</span>
-								</button>
+								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">Edit</button>
+								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">Delete</button>
 							</p>
 						</td>
 					</tr>
@@ -75,12 +64,8 @@
 						<td>Looser</td>
 						<td>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
-							        <span class="glyphicon glyphicon-edit"> Edit</span>
-								</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
-							        <span class="glyphicon glyphicon-trash"> Delete</span>
-								</button>
+								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">Edit</button>
+								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">Delete</button>
 							</p>
 						</td>
 					</tr>
@@ -125,12 +110,8 @@
 						<td>15€</td>
 						<td>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
-							        <span class="glyphicon glyphicon-edit"> Edit</span>
-								</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
-							        <span class="glyphicon glyphicon-trash"> Delete</span>
-								</button>
+								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">Edit</button>
+								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">Delete</button>
 							</p>
 						</td>
 					</tr>
@@ -142,12 +123,8 @@
 						<td>15€</td>
 						<td>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
-							        <span class="glyphicon glyphicon-edit"> Edit</span>
-								</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
-							        <span class="glyphicon glyphicon-trash"> Delete</span>
-								</button>
+								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">Edit</button>
+								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">Delete</button>
 							</p>
 						</td>
 					</tr>
@@ -159,12 +136,8 @@
 						<td>15€</td>
 						<td>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
-							        <span class="glyphicon glyphicon-edit"> Edit</span>
-								</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
-							        <span class="glyphicon glyphicon-trash"> Delete</span>
-								</button>
+								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">Edit</button>
+								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">Delete</button>
 							</p>
 						</td>
 					</tr>
