--- a/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
@@ -107,7 +107,7 @@
 				        <b>{{ annonce.anprix }} €</b>
 				        <div class="clear"></div>
                         <ul class="list-inline">
-                            <li><a href="#" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-info-sign"></span> {{ 'button_voir_detail' | trans }}</a></li>
+                            <li><a href="#" class="btn btn-primary" role="button"><i class="fa fa-info fa-lg"></i> {{ 'button_voir_detail' | trans }}</a></li>
                             {% if is_granted('ROLE_ADMIN') or (is_granted('ROLE_USER') and ( app.user.id == annonce.anuser )) %}
 	                            	<li><a href="#" class="btn btn-warning" role="button"><span class="glyphicon glyphicon-edit"></span> {{ 'button_edit_ads' | trans }}</a></li>
                             {% endif %}
