--- a/src/PA/GeneralBundle/Resources/views/Default/interfaceGestion.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/interfaceGestion.html.twig
@@ -40,8 +40,12 @@
 						<td>Looser</td>
 						<td>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">Edit</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">Delete</button>
+								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
+									<i class="fa fa-gear"></i> Modifier
+								</button>
+								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
+									<i class="fa fa-times"></i> Supprimer
+								</button>
 							</p>
 						</td>
 					</tr>
@@ -52,8 +56,12 @@
 						<td>Looser</td>
 						<td>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">Edit</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">Delete</button>
+								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
+									<i class="fa fa-gear"></i> Modifier
+								</button>
+								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
+									<i class="fa fa-times"></i> Supprimer
+								</button>
 							</p>
 						</td>
 					</tr>
@@ -64,15 +72,19 @@
 						<td>Looser</td>
 						<td>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">Edit</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">Delete</button>
+								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
+									<i class="fa fa-gear"></i> Modifier
+								</button>
+								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
+									<i class="fa fa-times"></i> Supprimer
+								</button>
 							</p>
 						</td>
 					</tr>
 				</tbody>
 			</table>
 			<form-group class="pull-right">
-				<a href="{{ path('pa_annonce_ajouter') }}" class="btn btn-success btn-sm active" role="button">Ajouter</a>
+				<a href="{{ path('pa_annonce_ajouter') }}" class="btn btn-success btn-sm active" role="button"><i class="fa fa-plus"></i> Ajouter</a>
 			</form-group>
 		</div>
 
@@ -110,8 +122,12 @@
 						<td>15€</td>
 						<td>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">Edit</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">Delete</button>
+								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
+									<i class="fa fa-gear"></i>
+								</button>
+								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
+									<i class="fa fa-times"></i>
+								</button>
 							</p>
 						</td>
 					</tr>
@@ -123,8 +139,12 @@
 						<td>15€</td>
 						<td>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">Edit</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">Delete</button>
+								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
+									<i class="fa fa-gear"></i>
+								</button>
+								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
+									<i class="fa fa-times"></i>
+								</button>
 							</p>
 						</td>
 					</tr>
@@ -136,15 +156,19 @@
 						<td>15€</td>
 						<td>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">Edit</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">Delete</button>
+								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
+									<i class="fa fa-gear"></i>
+								</button>
+								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
+									<i class="fa fa-times"></i>
+								</button>
 							</p>
 						</td>
 					</tr>
 				</tbody>
 			</table>
 			<form-group class="pull-right">
-				<a href="#" class="btn btn-success btn-sm active" role="button">Ajouter</a>
+				<a href="#" class="btn btn-success btn-sm active" role="button"><i class="fa fa-plus"></i> Ajouter</a>
 			</form-group>
 		</div>
 		{% endif %}
