--- a/src/PA/AnnonceBundle/Resources/views/Annonce/formvuannonce.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/formvuannonce.html.twig
@@ -18,8 +18,16 @@
 
 	<!-- First section -->
 	<div class="row">
-		<h2>Créer une nouvelle annonce</h2>
-		<p>{{ 'fil_ariane_text' | trans }}<a title="Accueil_title" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_annonce_afficher_mesannonces') }}">{{ 'Mes_annonces_title' | trans }}</a> >> <a href="{{route}}">{{ 'Creer_annonce_title' | trans }}</a></p>
+		{% if route == path('pa_annonce_ajouter') %}
+			<h2>Créer une nouvelle annonce</h2>
+		{% else %}
+			<h2>Modifier l'annonce</h2>
+		{% endif %}
+		<p>{{ 'fil_ariane_text' | trans }}<a title="Accueil_title" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_annonce_afficher_mesannonces') }}">{{ 'Mes_annonces_title' | trans }}</a> >> <a href="{{route}}">{% if route == path('pa_annonce_ajouter') %}
+			{{ 'Creer_annonce_title' | trans }}
+		{% else %}
+			{{ 'Modifier_annonce_title' | trans }}
+		{% endif %}</a></p>
 		<form action="{{route}}" id="form_creer_annonce" method="post" {{ form_enctype(form) }}>
 			{{ form_rest(form) }}
 			<div class="form-group">
