modifif bouton ajouter annonce

--- a/src/PA/AnnonceBundle/Resources/views/Annonce/mesannonces.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/mesannonces.html.twig
@@ -18,7 +18,8 @@
 	    <p>{{ 'fil_ariane_text' | trans }}<a title="{{ 'Accueil_title' | trans }}" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_annonce_afficher_mesannonces') }}">{{ 'Mes_annonces_title' | trans }}</a></p>
 		<hr />
 		
-		<a href="{{ path('pa_annonce_ajouter') }}"><button type="button" class="btn btn-primary pull-right"><i class="fa fa-fw fa-plus"></i>{{ 'bouton_add_ads' | trans }}</button></a>
+		<a href="{{ path('pa_annonce_ajouter') }}"><button type="button" class="btn btn-primary pull-right"><i class="fa fa-fw fa-plus"></i>{{ 'bouton_add_ads' | trans }}</button></a><br />
+		<br />
 		<div class="clear"></div>
 
 		<!-- Gestion des message flash -->
