Ajout barre de recherche sur la pahge d'accueil

--- a/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
@@ -90,6 +90,14 @@
 
 	<!-- Portfolio Section -->
 	<div class="row">
+		<h3>Utilisateurs</h3>
+			<label for="searchAdsByIdOrName">{{ 'interfaceG_search_ad' | trans }}</label>
+			<div class="input-group">
+				<input id="searchAdsByIdOrName" placeholder="{{ 'interfaceG_ads_placeHolder' | trans }}" type="text" class="form-control" />
+				<span class="input-group-btn">
+			  		<button class="btn btn-default" type="submit">OK</button>
+				</span>
+			</div>
 	    <div class="col-lg-12">
 	        <h2 class="page-header">{{'annonces_portfolio_title' | trans }}</h2>
 	    </div>
